tests/ui/traits/issue-32963.stderr
error[E0225]: only auto traits can be used as additional traits in a trait object
  --> $DIR/issue-32963.rs:8:31
   |
LL |     size_of_copy::<dyn Misc + Copy>();
   |                        ----   ^^^^ additional non-auto trait
   |                        |
   |                        first non-auto trait
   |
   = help: consider creating a new trait with all of these as supertraits and using that trait here instead: `trait NewTrait: Misc + Copy {}`
   = note: auto-traits like `Send` and `Sync` are traits that have special properties; for more information on them, visit <https://doc.rust-lang.org/reference/special-types-and-traits.html#auto-traits>

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0225`.
